src/stylus/features.styl
#features {
	padding: 35px 0;
	padding-bottom: 0;
	
	div:first-child {
		margin: 0 auto;
	}

	div.save-wrapper {
		margin: 0 auto;
	}

	article {
		width: 400px;
		float: right;
		padding: 30px 0;

		h5 {
			font-family: 'Proxima Nova Semibold';
			font-size: 16px;
			font-weight: normal;
			color: #000;
		}

		img {
			float: left;
			margin-right: 25px;
			position: relative;
			top: -10px;
		}
	}

	.action {
		position: relative;
		padding-top: 140px;
		padding-bottom: 40px;
		margin-top: 100px;
		border-top: 1px solid darken(#f9f9f9, 5%);
		background: #f9f9f9;
		text-align: center;
	}

	.pochoclin {
		position: absolute;
		top: -100px;
		left: 0;
		right: 0;
		width: 250px;
	}

	hr {
		border: none;
		border-top: 1px solid darken(#f9f9f9, 15%);
		position: relative;
		top: 10px;
		margin-top: 20px;
		width: 50%;

		+ h2 {
			background: #F9F9F9;
			display: inline-block;
			padding: 0 20px;
			top: -44px;
			position: relative;
			margin-bottom: 0;
			font-family: 'Proxima Nova Semibold';
			font-weight: normal;
			font-size: 32px;
			color: #464646;
		}
	}

	[class^="btn-"] {
		margin-top: -25px;
	}

	small {
		display: block;
		font-family: 'Proxima Nova Semibold Italic';
		font-size: 12px;
		color: #a7a7a7;
		line-height: 25px;
		margin-top: 10px;

		a {
			text-decoration: none;
			color: #a7a7a7;
		}
	}
}

.warning {
	background: #fdffe2;
	border-bottom: 1px solid #edf0c8;
	padding: 20px 0;
	text-align: center;

	h5 {
		display: block;
		max-width: 880px;
		position: relative;
		margin: 0 auto;
		font-size: 16px;
		font-family: 'Montserrat';
		font-weight: bold;
		color: #575939;
		margin-bottom: 20px;
	}

	p {
		display: block;
		margin: 5px auto;
		font-size: 14px;
		font-family: 'Montserrat';
		font-weight: normal;
		color: #adb08a;
	}

	img {
		width: 28px;
		height: 28px;
		margin-bottom: 20px;
	}
}

@media screen and (max-width: 980px){
	#features {
		article{
			-webkit-box-sizing: border-box;
			-moz-box-sizing: border-box;
			box-sizing: border-box;
			width: 100%;
			max-width: 800px;
			padding: 0 8%;
			overflow: hidden;
			float: none;
		}
	}
	.warning {
		text-align: center;
		h5:before {
			display: none;
		}
	}
}

@media screen and (max-width: 750px){
	#features {
		.pochoclin {
			padding: 0;
		}
		hr {
			display: none;
		}
		hr + h2 {
			margin-top: 20px;
			font-size: 30px;
			color: rgb(0, 0, 0);
		}
	}
}

@media screen and (max-width: 500px){
	#features {
		article{
			padding: 10px 8% 0;
			padding-top: 20px;
			max-width: 400px;
			p {
				margin-left: 105px;
			}
			img {
				max-width: 80px;
			}
		}
	}
}

